--- a/public/butterfly/css/style.css
+++ b/public/butterfly/css/style.css
@@ -33,6 +33,45 @@ h6 {
 }
 
 /*--------------------------------------------------------------
+# timeline
+--------------------------------------------------------------*/
+
+.timeline {
+  list-style: none;
+  padding: 0;
+  position: relative;
+}
+
+.timeline-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.timeline-image {
+  flex: 0 0 auto;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.timeline-panel {
+  flex: 1 1 auto;
+  margin-left: 20px;
+}
+
+.title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.description {
+  font-size: 14px;
+}
+
+/*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
 .back-to-top {
@@ -69,7 +108,7 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: #f5f9fa;
+  background: #ffffff;
   transition: all 0.5s;
   z-index: 997;
   padding: 10px 0;
