--- a/public/butterfly/css/style.css
+++ b/public/butterfly/css/style.css
@@ -1410,6 +1410,29 @@ section {
   }
 }
 
+/* Gambar responsif pada perangkat web */
+.image-link a img {
+  width: 100%;
+  height: auto;
+}
+
+/* Gambar responsif pada perangkat mobile */
+@media (max-width: 980px) {
+  .col-lg-2.offset-lg-2 {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+  }
+
+  .col-lg-2.offset-lg-3 .image-link {
+      width: 30%;
+      padding: 5px;
+  }
+}
+
+
+
+
 /*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
@@ -1539,11 +1562,11 @@ section {
 }
 
 #footer .footer-top .footer-contact h4 {
-  font-size: 22px;
+  font-size: 20px;
   margin: 0 0 30px 0;
   padding: 2px 0 2px 0;
   line-height: 1;
-  font-weight: 700;
+  font-weight: 800;
 }
 
 #footer .footer-top .footer-contact p {
@@ -1551,13 +1574,13 @@ section {
   line-height: 24px;
   margin-bottom: 0;
   font-family: "Lato", sans-serif;
-  color: #777777;
+  color: #ffffff;
 }
 
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #0f394c;
+  color: #000000;
   position: relative;
   padding-bottom: 12px;
 }
@@ -1590,7 +1613,7 @@ section {
 }
 
 #footer .footer-top .footer-links ul a {
-  color: #777777;
+  color: #ffffff;
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
@@ -1641,3 +1664,36 @@ section {
     text-align: center;
   }
 }
+
+/*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
+
+
+.footer-top {
+  background-color: #ffffff;
+  padding: 20px 0;
+}
+
+.footer-top h4 {
+  color: #000000;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.footer-top ul {
+  padding-left: 0;
+  list-style: none;
+}
+
+.footer-top li {
+  margin-bottom: 8px;
+  line-height: 1.5;
+}
+
+.footer-top li i {
+  color: #888;
+  margin-right: 5px;
+}
+
